<resources>
    <string name="app_name">ProjetoOdonto</string>
    <string name="Aguarde">aguarde estamos carregando nosso sistema.\n</string>
    <string name="SouConsultorio">Sou Consultorio</string>
    <string name="Email">Email</string>
    <string name="Senha">Senha</string>
    <string name="Login">Login</string>
    <string name="Cadastro">Cadastro</string>
    <string name="EsqueceuSenha">Esqueceu Senha?</string>
    <string name="EsqueceuSenha2">Esqueci minha senha</string>
    <string name="Texto2">Para redefinir sua senha, informe \no usuario ou email \ncadastrado na sua conta e \nlhe enviaremos um link com as instruções\n</string>
    <string name="EmailSenha">Email ou usuario</string>
    <string name="Proximo">Próximo</string>
    <string name="Cancelar">Cancelar</string>
    <string name="GerenciamentoEmpresa">Gerenciamento de Empresa</string>
    <string name="Texto4">Empresa OdontoFi\nAvalição X X X X ou 4.0\nQuantidade de profissionais\nQuantidade de sinistros\nRedução de prejuizo.</string>
    <string name="VerPro">Ver Profissionais</string>
    <string name="CadastroConsultorio">Cadastro de Consultorio\n</string>
    <string name="Con">Nome Consultorio</string>
    <string name="Func2">Funcionarios</string>
    <string name="Log">Login</string>
    <string name="Senha3">Senha</string>
    <string name="Cadastro2">Cadastro\n</string>
    <string name="VerPro2">Ver profissionais</string>
    <string name="text2">Empresa OdontoFi\nAvalição X X X X ou 4.0\nQuantidade de profissionais\nQuantidade de sinistros\nRedução de prejuizo.</string>
    <string name="Ver5">Saber sobre o profissional</string>
    <string name="text3">Empresa OdontoFi\nAvalição do profissional X\nQuantidade de\natendimentos realizados X\n</string>
    <string name="Preju">Ver Prejuizo</string>
    <string name="ClientesAten">Clientes Atendidos</string>
    <string name="NomeDo">Dr Claudio</string>
    <string name="opa32" />
    <string name="pá" />
    <string name="pa">Dr Manoel</string>
    <string name="ClientesA">Clientes Atendidos</string>
    <string name="tsadas" />
    <string name="opa3">"Eduarda\n + Procedimentos realizados por:\nClaudio\n             + limpeza OK\n         + Carie OK\nValor do tratamento:\nLucro por parte do profissional: "</string>
    <string name="Denunciar">Denunciar</string>
    <string name="verSinistros">Sinistros\n</string>
</resources>